fix mobile width overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -144,3 +144,6 @@ body {
   font-weight:700;
   cursor:pointer;
 }
+html, body {
+  overflow-x: hidden;
+}
